# soupault

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  dune-project  link_widgets.ml  soupault.opam
.github/workflows/: linux-release.yml  macos-release.yml  main.yml  windows-release.yml
examples/: site-url.lua
sample-site/: soupault.conf  soupault.toml
sample-site/scripts/: git-last-modified
sample-site/site/: about.inc  index.inc
sample-site/templates/: footer.html  main.html
scripts/: release.sh
src/: autoindex.ml  breadcrumbs_widget.ml  builtin_widgets.ml  cache.ml  common.ml  config.ml  defaults.ml  dune  file_path.ml  footnotes_widget.ml  hooks.ml  html_utils.ml  html_widgets.ml  inclusion_widgets.ml  link_widgets.ml  otoml.ml  path_options.ml  plugin_api.ml  plugins.ml  process_utils.ml  project_init.ml  regex_utils.ml  rose_tree.ml  site_dir.ml  soupault.ml  soupault_common.ml  spellcheck.ml  template.ml  text.ml  title_widget.ml  toc_tree.ml  toc_widget.ml  toml_utils.ml  tsort.ml  utils.ml  version.ml  widget_utils.ml  widgets.ml
src/helpers/: file_path.ml  hash.ml  html_utils.ml  markdown.ml  process_utils.ml  regex_utils.ml  template.ml  text.ml  toc_tree.ml  utils.ml  widget_utils.ml
src/otoml/: dune  oprint.ml  otoml.ml
src/widgets/: breadcrumbs_widget.ml  footnotes_widget.ml  html_widgets.ml  inclusion_widgets.ml  link_widgets.ml  title_widget.ml  toc_widget.ml
