opam-version: "2.0"
name: "soupault"
version: "1.6.1"
synopsis: "Static website generator based on HTML rewriting"
description: """
A website generator that works with page element tree rather than text
and allows you to manipulate pages and retrieve metadata from
existing HTML using arbitrary CSS selectors.

Built-in functionality includes setting page title, generating ToC and footnotes,
inserting files/HTML snippets or output of external programs into pages etc.

Metadata extracted from pages can be rendered using Mustache templates or exported to JSON
and processed with an external script.

Extensible with Lua (2.5) plugins. Can also be used as an HTML processor for existing pages.
"""
maintainer: "Daniil Baturin <daniil@baturin.org>"
authors: "Daniil Baturin <daniil@baturin.org>"
license: "MIT"
homepage: "https://soupault.neocities.org"
bug-reports: "https://github.com/dmbaturin/soupault/issues"
dev-repo: "git+https://github.com/dmbaturin/soupalt"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.07"}
  "dune" {build & >= "2.0.0"}
  "lambdasoup"
  "markup" {>= "0.8.2"}
  "toml"
  "fileutils"
  "logs"
  "fmt"
  "re"
  "ezjsonm"
  "ocaml-monadic" {build}
  "containers"
  "stringext"
  "calendar"
  "spelll"
  "mustache"
  "tsort"
  "lua-ml"
]
