(include_subdirs unqualified)

(executable
 (name soupault)
 (public_name soupault)
 ; Uncomment for a static build, note that it requires a +musl+static+flambda compiler variant to work
 ;(flags (-ccopt -static))
 (libraries
   lambdasoup
   containers
   fileutils
   logs
   logs.fmt
   fmt.tty
   otoml
   ezjsonm
   yaml
   csv
   re
   odate
   spelll
   jingoo
   base64
   digestif
   camomile
   tsort
   lua-ml))
