(include_subdirs unqualified)

(executable
 (name soupault)
 (public_name soupault)
 (libraries
   lambdasoup
   containers
   fileutils
   logs
   logs.fmt
   fmt.tty
   otoml
   ezjsonm
   yaml
   csv
   re
   odate
   spelll
   jingoo
   base64
   digestif
   camomile
   tsort
   lua-ml
   cmarkit))
